automation/kubernetes/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-api-py-ing
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    cert-manager.io/cluster-issuer: "letsencrypt-api-prod"
spec:
  rules:
  - host: app.mathstronautsportal.ca
    http:
      paths:
      - pathType: Prefix
        path: "/sample-api-py"
        backend:
          service:
            name: sample-api-py
            port:
              number: 80
  tls:
  - hosts:
    - app.mathstronautsportal.ca
    secretName: letsencrypt-api-prod
